// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchItem should render future match correctly 1`] = `
<div
  className="MuiButtonBase-root-18 MuiListItem-root-7 MuiListItem-default-10 MuiListItem-gutters-14 MuiListItem-divider-13 MuiListItem-button-15"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-21 Component-text-6 Component-right-4"
  >
    <div>
      Test2
    </div>
  </div>
  <div
    className="Component-score-5"
  >
    <div
      className="Component-dash-1"
    >
      :
    </div>
  </div>
  <div
    className="MuiListItemText-root-21 Component-text-6"
  >
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-27"
  />
</div>
`;

exports[`MatchItem should render played match correctly 1`] = `
<div
  className="MuiButtonBase-root-18 MuiListItem-root-7 MuiListItem-default-10 MuiListItem-gutters-14 MuiListItem-divider-13 MuiListItem-button-15"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-21 Component-text-6 Component-right-4"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-34 Component-icon-2"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-3"
      >
        <img
          className="MuiAvatar-img-37"
          src="logo2"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-5"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-1"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root-21 Component-text-6"
  >
    <div
      className="MuiListItemIcon-root-34"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-3"
      >
        <img
          className="MuiAvatar-img-37"
          src="logo1"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-27"
  />
</div>
`;
